--- a/README.textile
+++ b/README.textile
@@ -1,8 +1,10 @@
-h1. THIS PROJECT HAS BEEN DISCONTINUED
+h1. My vimfiles :)
 
-I recommend the vimfiles from YADR (and the entire dotfiles, actually, it's quite nice and well done and maintained)
+This project it's a fork from akitaonrails/vimfiles, but he discontinued the project.
 
-  https://github.com/JeanMertz/omz-to-prezto
+It's just my vimfiles!
+
+OBS: all descriptions here are from akitaonrails/vimfiles (:https://github.com/akitaonrails/vimfiles")
 
 h1. Vim
 
@@ -52,6 +54,7 @@ h1. Bundled Plugins
 * "ZoomWin":https://github.com/vim-scripts/ZoomWin - Zoom in/out of windows (toggle between one window and multi-window)
 * "vim-slim":https://github.com/bbommarito/vim-slim - syntax highlight for Slim
 * "webapi-vim":https://github.com/mattn/webapi-vim" - vim interface to Web API
+* "vim-multiedit":https://github.com/hlissner/vim-multiedit - plugin for multi-selection and edit
 
 h1. Usage
 
@@ -182,3 +185,6 @@ h2. Credits
 * All the cool plugins for Rails, Cucumber and more: @timpope
 * Great Command-T plugin by: Wincent
 * Hacks and some snippets: @akitaonrails
+
+h2. Contact
+* Follow me! "@eduardojmatos":http://twitter.com/eduardojmatos
